Filter function Works
Can filtre through the platforms

--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -60,9 +60,9 @@
 
 
 @code {
-	public List<PC_Game> pcGameToShow;
-	public List<XBOX_Game> xboxGameToShow;
-	public List<PS_Game> psGameToShow;
+	public List<Item> pcGameToShow;
+	public List<Item> xboxGameToShow;
+	public List<Item> psGameToShow;
 
 
 	protected override void OnInitialized()
