--- a/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
+++ b/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
@@ -59,13 +59,13 @@
 
 @code {
 	[Parameter]
-	public List<PC_Game> pcGamesToShow { get; set; }
+	public List<Item> pcGamesToShow { get; set; }
 
 	[Parameter]
-	public List<XBOX_Game> xboxGamesToShow { get; set; }
+	public List<Item> xboxGamesToShow { get; set; }
 
 	[Parameter]
-	public List<PS_Game> psGamesToShow { get; set; }
+	public List<Item> psGamesToShow { get; set; }
 	private string[] images = new string[] { "ac", "skyrim", "ac", "skyrim", "ac", "skyrim", "ac", "skyrim", "ac", "skyrim", "ac", "skyrim" };
 
 
