Made all user login work

--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -8,8 +8,9 @@
 			<div class="left-colum">
 				<h2 class="header-top-section">Buy and Sell Used Video Games</h2>
 				<p>Discover a wide selection of pre-owned video games and console. Start buying or selling today.</p>
-				<a href="" class="btn btn-dark">Start</a>
-				<a href="" class="btn btn-dark">Learn More</a>
+				<a href="/productlist" class="btn btn-dark">Browse sales</a>
+				<a href="/login" class="btn btn-dark">LogIn</a>
+				<a href="/register" class="btn btn-dark">Register</a>
 			</div>
 			<div class="right-colum">
 				<img src="./Picture/Front.jpg" alt="" class="colum-image" />
@@ -51,12 +52,12 @@
 	</div>
 	<div class="button-container-middle-section">
 		<a href="" class="btn btn-dark">Learn More</a>
-		&nbsp; @*Gives a standard space between the anchors*@
-		<a href="" class="btn btn-dark">Sign Up</a>
+		&nbsp; @* Gives a standard space between the anchors *@
+		
 	</div>
 </div>
 
-@* <CarouselProductCard pcGamesToShow="@pcGameToShow" psGamesToShow="@psGameToShow" xboxGamesToShow="@xboxGameToShow"></CarouselProductCard> *@
+<CarouselProductCard pcGamesToShow="@pcGameToShow" psGamesToShow="@psGameToShow" xboxGamesToShow="@xboxGameToShow"></CarouselProductCard>
 
 
 @code {
