--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @using Service
+@inject DatabaseService DatabaseService
 @inject AuthenticationService AuthenticationService
 
 
@@ -14,7 +15,7 @@
             
             @if (AuthenticationService.IsAuthenticated)
             {
-                <button class="btn btn-link" disabled>Logget ind som: @AuthenticationService.CurrentUser.name</button>
+                <button class="btn btn-link" @onclick="profilePage">Logged in as: @AuthenticationService.CurrentUser.name</button>
                 <button type="button" class="btn btn-link" @onclick="logout">Log Out</button>
             }
             else
@@ -39,8 +40,7 @@
 </div>
 
 @code {
-    [Parameter]
-    public int userID { get; set; }
+
     private void logout()
     {
         AuthenticationService.Logout();
@@ -49,7 +49,11 @@
 
     private void profilePage()
     {
-        NavigationManager.NavigateTo($"/profilepage/{userID}");
+        // Sørg for at sætte CurrentUserID til korrekt id baseret på den aktuelle brugers userID
+        var currentUserID = AuthenticationService.CurrentUser.userID.ToString();
+        DatabaseService.SetCurrentUserID(currentUserID);
+        NavigationManager.NavigateTo($"/profilepage/{currentUserID}"); // Bruger currentUserID til at navigere til profilsiden
     }
+    
 
 }
