updated navbar, not done

--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -10,21 +10,50 @@
 
 
     <main style="background-color:#212529;">
-        <div class="top-row px-4" style="background-color:#212529;">
-            
-            @if (AuthenticationService.IsAuthenticated)
-            {
-                <button class="btn btn-link" @onclick="profilePage">Logget ind som: @AuthenticationService.CurrentUser.name</button>
-                <button type="button" class="btn btn-link" @onclick="logout">Log Out</button>
-            }
-            else
-            {
-                <a href="login">LogIn</a>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="navcontainer">
+                <a class="navbar-brand" href="">blazornav</a>
+                <button class="navbar-toggler" type="button" @onclick="ToggleNavMenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+                    <ul class="navbar-nav flex-grow-1" id="new-navbar-menu">
+                        <li class="nav-item">
+                            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                            </NavLink>
+                        </li>
+                        <li class="nav-item">
+                            <NavLink class="nav-link" href="productlist">
+                                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product list
+                            </NavLink>
+                        </li>
+                        <li class="nav-item">
+                            <NavLink class="nav-link" href="SalesListing">
+                                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> List for sale
+                            </NavLink>
+                        </li>
+						<div class="top-row px-4" style="background-color:#212529;">
 
-                <a href="register">Register</a>
-            }
+							@if (AuthenticationService.IsAuthenticated)
+							{
+								<button class="btn btn-link" @onclick="profilePage">Logget ind som: @AuthenticationService.CurrentUser.name</button>
+								<button type="button" class="btn btn-link" @onclick="logout">Log Out</button>
+							}
+							else
+							{
+								<a href="login">LogIn</a>
 
-        </div>
+								<a href="register">Register</a>
+							}
+
+						</div>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+        
 
         <article class="content px-4" id="bodybackground">
             @Body
@@ -39,6 +68,18 @@
 </div>
 
 @code {
+    bool collapseNavMenu = true;
+
+    string baseMenuClass = "navbar-collapse d-sm-inline-flex flex-sm-row-reverse";
+
+    string NavMenuCssClass => baseMenuClass + (collapseNavMenu ? " collapse" : "");
+
+    void ToggleNavMenu()
+    {
+        collapseNavMenu = !collapseNavMenu;
+    }
+
+
     private void logout()
     {
         AuthenticationService.Logout();
