--- a/BlazorApp/Components/Layout/MainLayout.razor.css
+++ b/BlazorApp/Components/Layout/MainLayout.razor.css
@@ -8,6 +8,13 @@ main {
     flex: 1;
 }
 
+#new-navbar-menu {
+}
+
+.navcontainer {
+    justify-content: space-between !important;
+}
+
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
