--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -4,36 +4,38 @@
 
 
 <div class="page">
-    <div class="sidebar">
+@*     <div class="sidebar">
         <NavMenu/>
-    </div>
+    </div> *@
 
 
     <main style="background-color:#212529;">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="navcontainer">
-                <a class="navbar-brand" href="">blazornav</a>
+                <img class="Logo" src="/logo.png" style="max-height: 35px; max-width: 40px;">
                 <button class="navbar-toggler" type="button" @onclick="ToggleNavMenu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
                     <ul class="navbar-nav flex-grow-1" id="new-navbar-menu">
-                        <li class="nav-item">
+                        <li class="nav-item-show">
                             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
                             </NavLink>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item-show">
                             <NavLink class="nav-link" href="productlist">
-                                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product list
+                                <span id="navlink" class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product list
                             </NavLink>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item-show">
                             <NavLink class="nav-link" href="SalesListing">
                                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> List for sale
                             </NavLink>
                         </li>
-						<div class="top-row px-4" style="background-color:#212529;">
+                    </ul>
+                </div>
+						<div class="top-row">
 
 							@if (AuthenticationService.IsAuthenticated)
 							{
@@ -48,9 +50,6 @@
 							}
 
 						</div>
-                    </ul>
-
-                </div>
             </div>
         </nav>
         
