--- a/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
+++ b/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
@@ -11,7 +11,7 @@
 					<div class="carousel-item @(currentIndexPC == i ? "active" : "")">
 						<div class="card-body-bottom" @onclick="@( () => HandleCardClick(pcGamesToShow[localIndex].itemID))">
 							<h4>PC</h4>
-							<img src="@path" alt="image @i" />
+							<img src="@path" alt="image @i" class="image"/>
 							<h4 class="game-name">@pcGamesToShow[localIndex].gameName</h4>
 							<p class="game-genre">@pcGamesToShow[localIndex].genre</p>
 							<p class="game-price">€ @pcGamesToShow[localIndex].price</p>
