--- a/BlazorApp/Components/Pages/SalesListing.razor
+++ b/BlazorApp/Components/Pages/SalesListing.razor
@@ -218,13 +218,15 @@
     </div>
 }
 else{
-    <div class="card">
-        <div class="card-header">
-            <p>You need to log in, to create a new sale</p>
-        </div>
-        <div class="card-body">
-            <button class="btn btn-dark" @onclick="navlogin">Login</button>
-            <button class="btn btn-dark" @onclick="navregister">Register</button>
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                <p>You need to log in, to create a new sale</p>
+            </div>
+            <div class="card-body">
+                <button class="btn btn-dark" @onclick="navlogin">Login</button>
+                <button class="btn btn-dark" @onclick="navregister">Register</button>
+            </div>
         </div>
     </div>
 }
