Small update with white background

--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -67,7 +67,7 @@
 </div>
 
 @code {
-    bool collapseNavMenu = true;
+    bool collapseNavMenu = false;
 
     string baseMenuClass = "navbar-collapse d-sm-inline-flex flex-sm-row-reverse";
 
