--- a/BlazorApp/Components/Pages/Register.razor
+++ b/BlazorApp/Components/Pages/Register.razor
@@ -2,71 +2,73 @@
 @inject IJSRuntime JSRuntime
 @inject Service.DatabaseService DatabaseService
 
-<!-- Overlay with gradient for visual effect -->
-<div class="mask d-flex align-items-center gradient-custom-3">
-    <!-- Container for centering content -->
-    <div class="container">
-        <!-- Row for centered content column -->
-        <div class="row d-flex justify-content-center align-items-center">
-            <!-- Column for form, adjusts size based on screen size -->
-            <div class="col-12 col-md-9 col-lg-7 col-xl-4">
-                <!-- Card for registration form, rounded corners for aesthetics -->
-                <div class="card" style="border-radius: 15px; background-color: #b3b3b3;">
-                    <!-- Card body with padding for form -->
-                    <div class="card-body p-3">
-                        <!-- Heading for form -->
-                        <h2 class="text-center mb-1">Register</h2> <!-- Reducer margin her -->
-                        <form>
-                            <!-- Form field for name -->
-                            <div class="form-outline mb-3">
-                                <label class="form-label" for="formYourName">Your Name</label>
-                                <input type="text" id="formYourName" class="form-control form-control-sm" @bind="Name" required /> <!-- Reducer inputfelterne her -->
-                            </div>
 
-                            <!-- Form field for email -->
-                            <div class="form-outline mb-3">
-                                <label class="form-label" for="formYourEmail">Your Email</label>
-                                <input type="email" id="formYourEmail" class="form-control form-control-sm" @bind="Email" />
-                            </div>
+<div class="body">
+    <div class="mask d-flex align-items-center gradient-custom-3">
+        <!-- Container for centering content -->
+        <div class="container">
+            <!-- Row for centered content column -->
+            <div class="row d-flex justify-content-center align-items-center">
+                <!-- Column for form, adjusts size based on screen size -->
+                <div class="col-12 col-md-9 col-lg-7 col-xl-4">
+                    <!-- Card for registration form, rounded corners for aesthetics -->
+                    <div class="card" style="border-radius: 15px; background-color: #b3b3b3;">
+                        <!-- Card body with padding for form -->
+                        <div class="card-body p-3">
+                            <!-- Heading for form -->
+                            <h2 class="text-center mb-1">Register</h2> <!-- Reducer margin her -->
+                            <form>
+                                <!-- Form field for name -->
+                                <div class="form-outline mb-3">
+                                    <label class="form-label" for="formYourName">Your Name</label>
+                                    <input type="text" id="formYourName" class="form-control form-control-sm" @bind="Name" required /> <!-- Reducer inputfelterne her -->
+                                </div>
 
-                            <!-- Form field for password -->
-                            <div class="form-outline mb-3">
-                                <label class="form-label" for="formPassword">Password</label>
-                                <input type="password" id="formPassword" class="form-control form-control-sm" @bind="Password" />
-                            </div>
+                                <!-- Form field for email -->
+                                <div class="form-outline mb-3">
+                                    <label class="form-label" for="formYourEmail">Your Email</label>
+                                    <input type="email" id="formYourEmail" class="form-control form-control-sm" @bind="Email" />
+                                </div>
 
-                            <!-- Form field to repeat password -->
-                            <div class="form-outline mb-3">
-                                <label class="form-label" for="formPasswordRepeat">Confirm password</label>
-                                <input type="password" id="formPasswordRepeat" class="form-control form-control-sm" @bind="Password" />
-                            </div>
+                                <!-- Form field for password -->
+                                <div class="form-outline mb-3">
+                                    <label class="form-label" for="formPassword">Password</label>
+                                    <input type="password" id="formPassword" class="form-control form-control-sm" @bind="Password" />
+                                </div>
 
-                            <!-- Form field to phonenumber -->
-                            <div class="form-outline mb-3">
-                                <label class="form-label" for="formPhonenumber">Phone number</label>
-                                <input type="text" id="formPhonenumber" class="form-control form-control-sm" @bind="Phonenumber" />
-                            </div>
+                                <!-- Form field to repeat password -->
+                                <div class="form-outline mb-3">
+                                    <label class="form-label" for="formPasswordRepeat">Confirm password</label>
+                                    <input type="password" id="formPasswordRepeat" class="form-control form-control-sm" @bind="Password" />
+                                </div>
 
-                            <!-- Form field to city -->
-                            <div class="form-outline mb-3">
-                                <label class="form-label" for="formCity">City</label>
-                                <input type="text" id="formCity" class="form-control form-control-sm" @bind="City" />
-                            </div>
+                                <!-- Form field to phonenumber -->
+                                <div class="form-outline mb-3">
+                                    <label class="form-label" for="formPhonenumber">Phone number</label>
+                                    <input type="text" id="formPhonenumber" class="form-control form-control-sm" @bind="Phonenumber" />
+                                </div>
 
-                            <!-- Checkbox for agreement to terms of service -->
-                            <div class="form-check d-flex justify-content-center mb-4">
-                                <input class="form-check-input me-2" type="checkbox" value="" id="formAgreeCheckbox" />
-                                <label class="form-check-label" for="formAgreeCheckbox">
-                                    I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
-                                </label>
-                            </div>
-                            <!-- Register button -->
-                            <div class="d-flex justify-content-center">
-                                <button type="button" class="btn btn-dark btn-sm" @onclick="RegisterUser">Register</button> <!-- Reducer knappen her -->
-                            </div>
-                            <!-- Link for existing users to log in -->
-                            <p class="text-center text-muted mt-4 mb-0">Already have an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p>
-                        </form>
+                                <!-- Form field to city -->
+                                <div class="form-outline mb-3">
+                                    <label class="form-label" for="formCity">City</label>
+                                    <input type="text" id="formCity" class="form-control form-control-sm" @bind="City" />
+                                </div>
+
+                                <!-- Checkbox for agreement to terms of service -->
+                                <div class="form-check d-flex justify-content-center mb-4">
+                                    <input class="form-check-input me-2" type="checkbox" value="" id="formAgreeCheckbox" />
+                                    <label class="form-check-label" for="formAgreeCheckbox">
+                                        I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                                    </label>
+                                </div>
+                                <!-- Register button -->
+                                <div class="d-flex justify-content-center">
+                                    <button type="button" class="btn btn-dark btn-sm" @onclick="RegisterUser">Register</button> <!-- Reducer knappen her -->
+                                </div>
+                                <!-- Link for existing users to log in -->
+                                <p class="text-center text-muted mt-4 mb-0">Already have an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
