--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -19,8 +19,9 @@
 			</div>
 		</div>
 	</div>
-
-	<CarouselProductCard pcGamesToShow="@pcGameToShow" psGamesToShow="@psGameToShow" xboxGamesToShow="@xboxGameToShow"></CarouselProductCard>
+	<div class="carousel-container">
+		<CarouselProductCard pcGamesToShow="@pcGameToShow" psGamesToShow="@psGameToShow" xboxGamesToShow="@xboxGameToShow"></CarouselProductCard>
+	</div>
 </div>
 
 @code {
