--- a/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor.css
+++ b/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor.css
@@ -22,6 +22,7 @@
     text-align: center;
     background: #b3b3b3;
     border-radius: 10px;
+    max-block-size
 }
 
 .card-bottom-section:hover {
