--- a/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
+++ b/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
@@ -1,6 +1,4 @@
-﻿@page "/favorite"
-
-<PageTitle>Gamers Lounge: Your Favorites</PageTitle>
+﻿<PageTitle>Gamers Lounge: Your Favorites</PageTitle>
 
 <h3 class="text">Your Favorites</h3>
 <div class="container">
@@ -10,9 +8,14 @@
 @code {
     public List<Item> favGames = new List<Item>();
 
+    [Parameter]
+    public int userID { get; set; }
+
+
     protected override void OnInitialized()
     {
-        List<int> favorites = DB.GetFavoritesByUserID(1);
+        
+        List<int> favorites = DB.GetFavoritesByUserID(userID);
 
         foreach ( var item in DB.allItems)
         {
