updated navbar design

--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -17,23 +17,25 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-                    <ul class="navbar-nav flex-grow-1" id="new-navbar-menu">
-                        <li class="nav-item-show">
-                            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-                            </NavLink>
-                        </li>
-                        <li class="nav-item-show">
-                            <NavLink class="nav-link" href="productlist">
-                                <span id="navlink" class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product list
-                            </NavLink>
-                        </li>
-                        <li class="nav-item-show">
-                            <NavLink class="nav-link" href="SalesListing">
-                                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> List for sale
-                            </NavLink>
-                        </li>
-                    </ul>
+                    <div class="textColor">
+                        <ul class="navbar-nav flex-grow-1" id="new-navbar-menu">
+                            <li class="nav-item-show">
+                                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                                </NavLink>
+                            </li>
+                            <li class="nav-item-show">
+                                <NavLink class="nav-link" href="productlist">
+                                    <span id="navlink" class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product list
+                                </NavLink>
+                            </li>
+                            <li class="nav-item-show">
+                                <NavLink class="nav-link" href="SalesListing">
+                                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> List for sale
+                                </NavLink>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 						<div class="top-row">
 
