--- a/BlazorApp/Components/ReusableComponents/Listing.razor.css
+++ b/BlazorApp/Components/ReusableComponents/Listing.razor.css
@@ -113,7 +113,7 @@
 
 .game-price {
     font-size: 2.5rem;
-    color: chocolate;
+    color: deepskyblue;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     margin-top: auto;
 }
