--- a/BlazorApp/Components/Pages/Login.razor
+++ b/BlazorApp/Components/Pages/Login.razor
@@ -14,11 +14,11 @@
                     <form>
                         <div class="form-group">
                             <label for="username" class="label">Username</label>
-                            <input type="text" class="form-control" id="username" placeholder="Input username" @bind="username">
+                            <input type="text" class="form-control" id="username" placeholder="Input username" @bind="username" required>
                         </div>
                         <div class="form-group">
                             <label for="password" class="label">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Input Password" @bind="password">
+                            <input type="password" class="form-control" id="password" placeholder="Input Password" @bind="password" required>
                         </div>
                         <button type="submit" class="btn btn-dark" @onclick="HandleLogin" @onclick:preventDefault>Log ind</button>
                     </form>
