--- a/BlazorApp/Components/Pages/Register.razor
+++ b/BlazorApp/Components/Pages/Register.razor
@@ -27,36 +27,36 @@
                                 <!-- Form field for email -->
                                 <div class="form-outline mb-3">
                                     <label class="form-label" for="formYourEmail">Your Email</label>
-                                    <input type="email" id="formYourEmail" class="form-control form-control-sm" @bind="Email" />
+                                    <input type="email" id="formYourEmail" class="form-control form-control-sm" @bind="Email" required />
                                 </div>
 
                                 <!-- Form field for password -->
                                 <div class="form-outline mb-3">
                                     <label class="form-label" for="formPassword">Password</label>
-                                    <input type="password" id="formPassword" class="form-control form-control-sm" @bind="Password" />
+                                    <input type="password" id="formPassword" class="form-control form-control-sm" @bind="Password" required />
                                 </div>
 
                                 <!-- Form field to repeat password -->
                                 <div class="form-outline mb-3">
                                     <label class="form-label" for="formPasswordRepeat">Confirm password</label>
-                                    <input type="password" id="formPasswordRepeat" class="form-control form-control-sm" @bind="Password" />
+                                    <input type="password" id="formPasswordRepeat" class="form-control form-control-sm" @bind="Password" required />
                                 </div>
 
                                 <!-- Form field to phonenumber -->
                                 <div class="form-outline mb-3">
                                     <label class="form-label" for="formPhonenumber">Phone number</label>
-                                    <input type="text" id="formPhonenumber" class="form-control form-control-sm" @bind="Phonenumber" />
+                                    <input type="tel" id="formPhonenumber" class="form-control form-control-sm" @bind="Phonenumber" required />
                                 </div>
 
                                 <!-- Form field to city -->
                                 <div class="form-outline mb-3">
                                     <label class="form-label" for="formCity">City</label>
-                                    <input type="text" id="formCity" class="form-control form-control-sm" @bind="City" />
+                                    <input type="text" id="formCity" class="form-control form-control-sm" @bind="City" required />
                                 </div>
 
                                 <!-- Checkbox for agreement to terms of service -->
                                 <div class="form-check d-flex justify-content-center mb-4">
-                                    <input class="form-check-input me-2" type="checkbox" value="" id="formAgreeCheckbox" />
+                                    <input class="form-check-input me-2" type="checkbox" value="" id="formAgreeCheckbox" required />
                                     <label class="form-check-label" for="formAgreeCheckbox">
                                         I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
                                     </label>
@@ -66,7 +66,7 @@
                                     <button type="button" class="btn btn-dark btn-sm" @onclick="RegisterUser">Register</button> <!-- Reducer knappen her -->
                                 </div>
                                 <!-- Link for existing users to log in -->
-                                <p class="text-center text-muted mt-4 mb-0">Already have an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p>
+                                <p class="text-center text-muted mt-4 mb-0">Already have an account? <a href="/login" class="fw-bold text-body"><u>Login here</u></a></p>
                             </form>
                         </div>
                     </div>
@@ -86,5 +86,7 @@
     private async Task RegisterUser()
     {
         DatabaseService.AddUserToDatabase(Name, Email, Password, Phonenumber, City);
+
+        NavigationManager.NavigateTo($"/login");
     }
 }
